# ROS-TurtleBot

./: CMakeLists.txt  gitignore  one_tb3.rviz  package.xml  setup.py
action/: Controller.action
launch/: main.launch  pid_test.launch
maps/: map.pgm  map.yaml
src/balderrabano_rodriguez/: PID_controller.py  global_planner.py  goalPublisher.py  graph.py  local_planner.py  metrics_logger.py
tools/: analyze_and_log.py  pid_test_launcher.py  plot_results.py  rank_pid_logs.py
tools/bags/: kpL0.4_kiL0.01_kdL0.05_kpA0.8_kiA0.01_kdA0.1.bag  kpL0.5_kiL0.01_kdL0.1_kpA1.0_kiA0.05_kdA0.2.bag  kpL0.8_kiL0.02_kdL0.3_kpA1.5_kiA0.1_kdA0.5.bag  kpL1.0_kiL0.5_kdL0.5_kpA2.0_kiA0.1_kdA0.5.bag
tools/config/: pid.yaml
tools/logs/: kpL0.4_kiL0.01_kdL0.05_kpA0.8_kiA0.01_kdA0.1.yaml  kpL0.5_kiL0.01_kdL0.1_kpA1.0_kiA0.05_kdA0.2.yaml  kpL0.8_kiL0.02_kdL0.3_kpA1.5_kiA0.1_kdA0.5.yaml  kpL1.0_kiL0.5_kdL0.5_kpA2.0_kiA0.1_kdA0.5.yaml
