<?xml version="1.0"?>
<package format="2">
  <name>balderrabano_rodriguez</name>
  <version>0.0.0</version>
  <description>The Balderrabano_Rodriguez package</description>
  <maintainer email="rickyxrl8@gmail.com">ricardo</maintainer>
  <license>TODO</license>


  <!-- Build tools -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <!-- Export tag -->
  <export>
  </export>
</package>
